--- a/Style.css
+++ b/Style.css
@@ -14,7 +14,7 @@ body {
     padding:25px;
     background-color:lightblue;
     color:black;
-    font-size: 25px;
+    font-size: 2vw;
 }
 .transition {
     -webkit-transform: scale(1.2); 
